@@ -4,6 +4,7 @@ envlist =
     py{34,35,36,37}-django20-jinja
     py{35,36,37}-django21-jinja
     py{35,36,37,38}-django22-jinja
+    py{36,37,38}-django30
 
 [testenv]
 deps =
@@ -12,6 +13,7 @@ deps =
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     jinja: -rtravis_jinja.txt
+    django30: Django>=3.0,<3.1
     -rtravis.txt
 passenv = DATABASE_URL
 commands =
