@@ -5,6 +5,7 @@ Waffle Changelog
 v0.19.0
 =======
 - Made tests for jinja2 optional while waiting for django-jinja to be compatible with django 3.0.
+- Add support for Django 3.0 by removing use of deprecated functionality from Django 2.2.
 
 v0.18.0
 =======
